--- a/PorfolioMartinSesia/src/app/components/header/header.component.html
+++ b/PorfolioMartinSesia/src/app/components/header/header.component.html
@@ -1,1 +1,10 @@
-<img src="../../../../../APLogo.png" alt="">
+
+<div>
+    <img src="../../../assets/APLogo.png" id="logoarg">
+    <a href="https://www.instagram.com/tinchosesia/"><img src="../../../assets/instagram.png" alt="" id="logoig"></a>
+    <a href="https://www.facebook.com/eltinchoo.sesia/"><img src="../../../assets/facebook.png" alt="" id="logofb"></a>
+    <a href="https://github.com/MartinSesia"><img src="../../../assets/github.png" alt="" id="logogit"></a>
+</div>
+<img src="../../../assets/Matemática-Páginas-web-850x560.jpg" alt="" id="banner">
+
+
