--- a/PorfolioMartinSesia/src/app/components/header/header.component.css
+++ b/PorfolioMartinSesia/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@ img {
 }
 
 div {
-    background-color: #a2b4e6;
+    background-color: #191a1d;
     margin: 0px;
 }
 
@@ -12,7 +12,6 @@ div {
     float: right;
     margin: 10px;
     padding-top: 8px;
-    padding-right: 10px;
 }
 
 #logofb {
@@ -30,6 +29,10 @@ div {
 }
 
 #banner {
-    width: 100%;
-    height: 600px;
+    width: 1400px;
+    height: 500px;
+    margin-top: 50px;
+    margin-left: 275px;
+    border-radius: 90px;
+    border: 2px dashed #727375 ;
 }
