--- a/PorfolioMartinSesia/src/app/components/header/header.component.html
+++ b/PorfolioMartinSesia/src/app/components/header/header.component.html
@@ -5,6 +5,6 @@
     <a href="https://www.facebook.com/eltinchoo.sesia/"><img src="../../../assets/facebook.png" alt="" id="logofb"></a>
     <a href="https://github.com/MartinSesia"><img src="../../../assets/github.png" alt="" id="logogit"></a>
 </div>
-<img src="../../../assets/Matemática-Páginas-web-850x560.jpg" alt="" id="banner">
+<img src="../../../assets/15-152552_813087-title-technology-code-computer-programming-4k-wallpaper.jpg" alt="" id="banner">
 
 
