--- a/PorfolioMartinSesia/src/app/components/acerca-de/acerca-de.component.html
+++ b/PorfolioMartinSesia/src/app/components/acerca-de/acerca-de.component.html
@@ -1,18 +1,27 @@
+<div class="img-fluid img">
+    <!--<img src="../../../assets/programacion-2-e1551291144973.jpg" alt="" id="banner">-->
+    <h1 class="title">Mi Portfolio</h1>
+</div>
+
 <div class="row">
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/Screenshot_20220529-1935112.png" alt="" class="img-fluid">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 perfil">
+            <img src="../../../assets/Screenshot_20220529-1935112.png" class="img-fluid fotoperfil">
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p class="nombre"><b>Martín Sesia</b> <br> Full Stack developer Jr.</p>
-    </div>
-    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 me-sm-5 me-md-5 me-lg-5 me-xs-0 nombre">
+            <p><b>Martín Sesia</b><br>Full Stack developer Jr.</p>
+    </div>    
+    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 ms-sm-5 ms-md-5 ms-lg-5 ms-xs-0 acercademi">
         <span>
-            <h1 class="acerca">Acerca de Mi</h1>
+            <h1><b>Acerca de Mi</b></h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Repellat optio eum quidem esse dicta, iure vel nihil nisi delectus totam obcaecati 
-                enim asperiores sunt aliquam. Saepe nam sint ab optio.
+                 Harum fuga quo perspiciatis ut quisquam cum quaerat id, quidem, 
+                cupiditate cumque autem accusantium
             </p>
         </span>
     </div>
 </div>
+
+
+
+
