--- a/PorfolioMartinSesia/src/app/components/header/header.component.html
+++ b/PorfolioMartinSesia/src/app/components/header/header.component.html
@@ -1,10 +1,12 @@
-
-<div>
-    <img src="../../../assets/APLogo.png" id="logoarg">
-    <a href="https://www.instagram.com/tinchosesia/"><img src="../../../assets/instagram.png" alt="" id="logoig"></a>
-    <a href="https://www.facebook.com/eltinchoo.sesia/"><img src="../../../assets/facebook.png" alt="" id="logofb"></a>
-    <a href="https://github.com/MartinSesia"><img src="../../../assets/github.png" alt="" id="logogit"></a>
-</div>
-<img src="../../../assets/15-152552_813087-title-technology-code-computer-programming-4k-wallpaper.jpg" alt="" id="banner">
+<header>
+    <div class="logo1">
+        <img src="../../../assets/APLogo.png" id="logoarg">
+    </div>  
+    <nav>
+        <a href="https://www.instagram.com/tinchosesia/"><img src="../../../assets/instagram.png" alt="" class="logo"></a>
+        <a href="https://www.facebook.com/eltinchoo.sesia/"><img src="../../../assets/facebook.png" alt="" class="logo"></a>
+        <a href="https://github.com/MartinSesia"><img src="../../../assets/github.png" alt="" class="logo"></a>
+    </nav>    
+</header>
 
 
