Soft & hard skills y creacion componente proyecto

--- a/PorfolioMartinSesia/src/app/components/experiencia/experiencia.component.html
+++ b/PorfolioMartinSesia/src/app/components/experiencia/experiencia.component.html
@@ -1,11 +1,43 @@
 <div class="row">
     <h1>Experiencia Laboral</h1>
-    <div class="col-lg-11">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-11 conteiner">
         <ul>
             <li>
-                <h1>Trabajo 1</h1> - <h3>(years)</h3>
-            </li>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
+                <h2>Trabajo 1</h2> - <h3>(years)</h3>
+            </li>     
+            <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
+                amet eligendi nostrum corporis, voluptatibus incidunt, 
+                ullam quibusdam soluta hic fuga nobis iste maiores libero unde repellat commodi!</p>
+        </ul>
+    </div>
+</div>
+
+<div class="row">
+    <h1>Educacion</h1>
+    <div class="col-lg-1"></div>
+    <div class="col-lg-11 conteiner">
+        <ul>
+            <li>
+                <h2>Estudio 1</h2> - <h3>(years)</h3>
+            </li>     
+            <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
+                amet eligendi nostrum corporis, voluptatibus incidunt, 
+                ullam quibusdam soluta hic fuga nobis iste maiores libero unde repellat commodi!</p>
+        </ul>
+        <ul>
+            <li>
+                <h2>Estudio 2</h2> - <h3>(years)</h3>
+            </li>     
+            <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
+                amet eligendi nostrum corporis, voluptatibus incidunt, 
+                ullam quibusdam soluta hic fuga nobis iste maiores libero unde repellat commodi!</p>
+        </ul>
+        <ul>
+            <li>
+                <h2>Estudio 3</h2> - <h3>(years)</h3>
+            </li>     
+            <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
                 amet eligendi nostrum corporis, voluptatibus incidunt, 
                 ullam quibusdam soluta hic fuga nobis iste maiores libero unde repellat commodi!</p>
         </ul>
