--- a/PorfolioMartinSesia/src/app/components/acerca-de/acerca-de.component.css
+++ b/PorfolioMartinSesia/src/app/components/acerca-de/acerca-de.component.css
@@ -23,10 +23,14 @@ div {
 
 .row {
     margin: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
     padding: 30px;
-    background-color: rgb(61, 61, 61);
     margin-top: 50px;
-    color: rgb(182, 181, 181);
+    border-radius: 60px;
+    /**border-left: 6px solid black;
+    border-bottom: 6px solid black;**/
+    border: 4px solid black;
 }
 
 /** #banner {
@@ -45,7 +49,7 @@ div {
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
-    width: 80%;
+    width: 100%;
     margin: auto;
     margin-top: 30px;
 }
@@ -54,8 +58,7 @@ div {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid white;
-    border-radius: 30px;
+    border-left: 5px solid rgb(126, 126, 126);
 }
 
 .nombre {
@@ -75,7 +78,6 @@ div {
     text-align: center;
 }
 
-
 @media (min-width: 576px) {
     .perfil {
         margin: auto;
@@ -83,16 +85,18 @@ div {
 
     .fotoperfil {
         position: relative;
-        border: 3px solid rgb(255, 255, 255);
         height: 350px;
         width: 340px;
         margin: auto;
+        border-left: 25px solid rgb(58, 58, 58);
+        border-radius: 20px;
     }
 }
 
 @media (max-width: 575px) {
     .img {
         margin: 0px;
+        width: 100%;
     }
 
     #banner {
@@ -105,18 +109,24 @@ div {
         border-radius: none;
         height: 250px;
         width: 50%;
+        border-radius: 20px;
     }
 
     .row {
-        margin-top: 0px;
+        margin-top: 30px;
     }
 
     .nombre, .acercademi {
         margin-top: 10px;
+        border: none;
     }
 
     .acercademi {
         padding: 10px;
+    }
+
+    .title{
+        font-size: 62px;
     }
 }
 
