--- a/PorfolioMartinSesia/src/app/components/experiencia/experiencia.component.css
+++ b/PorfolioMartinSesia/src/app/components/experiencia/experiencia.component.css
@@ -1,3 +1,26 @@
+*{
+    margin: 0px;
+}
+
 .row {
-    padding: 20px;
+    margin-top: 100px;
+    padding-left: 50px;
+    border: 2px solid black;
+    border-radius: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
+
+}
+
+.conteiner {
+    margin-top: 20px;
+}
+
+h2, h3 {
+    display: inline
+}
+
+.texto {
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
