Creacion de carpeta front y back end

--- a/PorfolioMartinSesia/Frontend/src/app/components/experiencia/experiencia.component.html
+++ b/PorfolioMartinSesia/Frontend/src/app/components/experiencia/experiencia.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-    <h1>Experiencia Laboral</h1>
+    <h1>EXPERIENCIA LABORAL</h1>
     <div class="col-lg-1"></div>
     <div class="col-lg-11 conteiner">
         <ul>
             <li>
-                <h2>Trabajo 1</h2> - <h3>(years)</h3>
+                <h3>Trabajo 1</h3> - <h3>(years)</h3>
             </li>     
             <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
                 amet eligendi nostrum corporis, voluptatibus incidunt, 
@@ -14,12 +14,12 @@
 </div>
 
 <div class="row">
-    <h1>Educacion</h1>
+    <h1 class="educ">EDUCACION</h1>
     <div class="col-lg-1"></div>
     <div class="col-lg-11 conteiner">
         <ul>
             <li>
-                <h2>Estudio 1</h2> - <h3>(years)</h3>
+                <h3>Estudio 1</h3> - <h3>(years)</h3>
             </li>     
             <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
                 amet eligendi nostrum corporis, voluptatibus incidunt, 
@@ -27,7 +27,7 @@
         </ul>
         <ul>
             <li>
-                <h2>Estudio 2</h2> - <h3>(years)</h3>
+                <h3>Estudio 2</h3> - <h3>(years)</h3>
             </li>     
             <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
                 amet eligendi nostrum corporis, voluptatibus incidunt, 
@@ -35,7 +35,7 @@
         </ul>
         <ul>
             <li>
-                <h2>Estudio 3</h2> - <h3>(years)</h3>
+                <h3>Estudio 3</h3> - <h3>(years)</h3>
             </li>     
             <p class="texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi expedita laborum 
                 amet eligendi nostrum corporis, voluptatibus incidunt, 
