--- a/PorfolioMartinSesia/Frontend/src/app/components/header/header.component.html
+++ b/PorfolioMartinSesia/Frontend/src/app/components/header/header.component.html
@@ -5,7 +5,8 @@
     <nav>
         <a href="https://www.instagram.com/tinchosesia/"><img src="../../../assets/instagram.png" alt="" class="logo"></a>
         <a href="https://www.facebook.com/eltinchoo.sesia/"><img src="../../../assets/facebook.png" alt="" class="logo"></a>
-        <a href="https://github.com/MartinSesia"><img src="../../../assets/github.png" alt="" class="logo"></a>
+        <a href="https://github.com/MartinSesia"><img src="../../../assets/github.png" alt="" class="logo git"></a>
+        <button class="btn btn-outline-light">Login</button>
     </nav>    
 </header>
 
