--- a/PorfolioMartinSesia/Frontend/src/app/app.component.html
+++ b/PorfolioMartinSesia/Frontend/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
 <app-hys></app-hys>
+<app-proyecto></app-proyecto>
+<app-footer></app-footer>
