--- a/PorfolioMartinSesia/Frontend/src/app/components/acerca-de/acerca-de.component.css
+++ b/PorfolioMartinSesia/Frontend/src/app/components/acerca-de/acerca-de.component.css
@@ -30,7 +30,7 @@ div {
     border-radius: 60px;
     /**border-left: 6px solid black;
     border-bottom: 6px solid black;**/
-    border: 4px solid black;
+    border: 3px solid lightgray;
 }
 
 /** #banner {
