--- a/PorfolioMartinSesia/Frontend/src/app/components/experiencia/experiencia.component.css
+++ b/PorfolioMartinSesia/Frontend/src/app/components/experiencia/experiencia.component.css
@@ -3,13 +3,14 @@
 }
 
 .row {
-    margin-top: 100px;
+    margin-top: 50px;
     padding-left: 50px;
-    border: 2px solid black;
+    border: 3px solid lightgray;
     border-radius: 30px;
     margin-left: 40px;
     margin-right: 40px;
-
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .conteiner {
@@ -23,4 +24,8 @@ h2, h3 {
 .texto {
     margin-top: 15px;
     margin-bottom: 20px;
+}
+
+h1 {
+    font-size: 35px;
 }
