--- a/PorfolioMartinSesia/Frontend/src/app/components/hys/hys.component.css
+++ b/PorfolioMartinSesia/Frontend/src/app/components/hys/hys.component.css
@@ -1,7 +1,8 @@
 .row {
     padding: 20px;
-    border: 2px solid black;
+    border: 3px solid lightgray;
     margin: 40px;
+    margin-top: 50px;
     border-radius: 30px;
 }
 
@@ -13,4 +14,5 @@
 h1 {
     text-align: center;
     margin-top: 25px;
+    font-size: 40px;
 }
