--- a/PorfolioMartinSesia/Frontend/src/app/components/hys/hys.component.html
+++ b/PorfolioMartinSesia/Frontend/src/app/components/hys/hys.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h1 class="hys">Hard & Soft skills</h1>
+    <h1 class="hys">HARD & SOFT SKILLS</h1>
     <div class="text-center col-sm-4 col-md-4 col-lg-4 ">
         <circle-progress
             [percent]="70"
